# student-performance-classification

./: README.md  dashboard-streamlit.py  notebook-1.ipynb  pyproject.toml  requirements.txt
models/: final_lr_model.pkl  preprocessing_pipeline.pkl
